# python-practice-app

./: README.md  bump_version.py  pyproject.toml
.github/workflows/: learn-github-actions.yaml  python-publish.yml  readme
src/example_package_practice/: __init__.py  example.py
