[build-system]
requires = [ "hatchling >= 1.26",]
build-backend = "hatchling.build"

[project]
name = "example_package_practice"
version = "0.0.6"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license-files = [ "LICENSE",]
[[project.authors]]
name = "Example Author"
email = "author@example.com"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
myapp = "example_package_practice:run"
